Added in Firebase authentication

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TeamIceCreamSandwich</string>
+    <string name="title_activity_event__concert__astroworld">Event_Concert_Astroworld</string>
 </resources>
